glFusion ChangeLog

v1.2.0
------
- Implemented profile photos and custom author and group css in comments (Mark & Eric)
- Changed default comment mode to Nested (Eric)
- Fixed orphaned p tag in story footer preview when editing a story (Eric)
- CAPTCHA: Link and Calendar submissions did not work with reCAPTCHA (Mark)
- Links Admin: Admin interface improvements and partial scrub (Mark H.)
- Moderation: Admin interface improvements and extensive rewrite (Mark H.)
    - New feature: Only display submission lists for item types in queue
    - New feature: Display user who submitted item
- Story Admin: Admin interface improvements and code scrub (Mark H.)
- Media Gallery: Fixed issue where album owners would see the Delete option
  for media comments, but they could not actually delete the comment (Mark)
- Convert session cookie to use MD5 token instead of random number (Mark)
- Use mt_rand() instead of rand() and seed once per session (Mark)
- Ensure rating value is properly formatted and escaped prior to inserting
  into database (Mark)
- Forum: Fixed sorting on New Posts (Mark)
- New option for block location - all except home page (Mark)
- Forum: Use admin lists for site member report (Mark)
- Updated CAPTCHA and reCAPTCHA layouts (Eric)
- Layout on Register screen now matches the layout on Login screen (Eric)
- Allow users to select their own passwords and implement verification email
  (Mark)
- Ratings were not moved to new story when story id changed (Mark)
- Media Gallery: Fixed issue where quota was not always set properly when
  member album enrollment was enabled (Mark)
- Fixed default username and password being translated accidentally (Eric)
- Improved bbcode cheat sheet based on nouveau theme (Eric)
- Updated public_html/docs/config.html with new search info (Eric)
- Added ability to create remote users (when enabled) (Mark)
- FileMgmt: Add new configuration option 'Silent Edit Default' (Mark)
- Move services dropdown after password on login forms (Mark)