@@ -251,9 +251,11 @@ function install_config($site_url)
     $c->add('comment_code',0,'select',4,21,17,1670,TRUE);
     $c->add('comment_edit',0,'select',4,21,0,1680,TRUE);
     $c->add('comment_edittime',1800,'text',4,21,NULL,1690,TRUE);
-    $c->add('article_comment_close_enabled',0,'select',4,21,0,1695,TRUE);
-    $c->add('article_comment_close_days',30,'text',4,21,NULL,1700,TRUE);
-    $c->add('comment_close_rec_stories',0,'text',4,21,NULL,1710,TRUE);
+    $c->add('comment_postmode','plaintext','select',4,21,5,1695,TRUE);
+    $c->add('comment_editor',0,'select',4,21,28,1700,TRUE);
+    $c->add('article_comment_close_enabled',0,'select',4,21,0,1705,TRUE);
+    $c->add('article_comment_close_days',30,'text',4,21,NULL,1710,TRUE);
+    $c->add('comment_close_rec_stories',0,'text',4,21,NULL,1715,TRUE);
 
     // Subgroup: Images
     $c->add('sg_images', NULL, 'subgroup', 5, 0, NULL, 0, TRUE);
