@@ -921,6 +921,9 @@ function INST_doDatabaseUpgrades($current_fusion_version, $use_innodb = false)
             DB_query("ALTER TABLE {$_TABLES['sessions']} DROP PRIMARY KEY",1);
             DB_query("ALTER TABLE {$_TABLES['sessions']} ADD PRIMARY KEY (md5_sess_id)",1);
 
+            $c->add('comment_postmode','plaintext','select',4,21,5,1693,TRUE);
+            $c->add('comment_editor',0,'select',4,21,28,1694,TRUE);
+
             DB_query("INSERT INTO {$_TABLES['vars']} SET value='1.2.0',name='glfusion'",1);
             DB_query("UPDATE {$_TABLES['vars']} SET value='1.2.0' WHERE name='glfusion'",1);
             DB_query("DELETE FROM {$_TABLES['vars']} WHERE name='database_version'",1);
