@@ -1180,7 +1180,7 @@ receive their password) </td>
 <tr class="row1">
 <td class="col0 leftalign"><a name="desc_registration_type">Registration Type</a> </td>
 <td class="col1 leftalign">Generate Password will automatically generate a random password for the user
-upon registration, and send it to them in the welcome email. User Enters Password will prompt the user to create their own password 
+upon registration, and send it to them in the welcome email. User Enters Password will prompt the user to create their own password
 when they fill out the registration form, and will require them to click on a verification link sent in the welcome email.</td>
 </tr>
 <tr class="row2">
@@ -1322,6 +1322,20 @@ Edit Time</td>
 seconds). If set ot 0, the user can edit the comment anytime in the
 future.</td>
 </tr>
+
+<tr>
+<td><a name="desc_comment_postmode"></a>Comment Post mode</td>
+<td>Select the default postmode for comments.</td>
+</tr>
+
+<tr>
+<td><a name="desc_comment_editor"></a>Comment Editor</td>
+<td>Select the type of editor to use for comments.  Options are Text Box which
+    uses a standard HTML text box for both HTML and text comments. WYSIWYG will display
+    the advanced What You See is What You Get editor.
+    </td>
+</tr>
+
 <tr>
 <td><a name="desc_article_comment_close_days"></a>Days
 to close comments</td>
