@@ -1,52 +1,52 @@
 {# begin {templatelocation} #}
-                                {start_block_postacomment}
-                                            <form action="{site_url}/comment.php" method="post">
-                                                <table cellspacing="0" cellpadding="3" width="95%">
-                                                    <tr>
-                                                        <td class="alignright"><b>{lang_username}:</b></td>
-                                                        <td>
-                                                            {cid}
-                                                            <input type="hidden" name="sid" value="{sid}"{xhtml}>
-                                                            <input type="hidden" name="pid" value="{pid}"{xhtml}>
-                                                            <input type="hidden" name="type" value="{type}"{xhtml}>
-                                                            <input type="hidden" name="_glsectoken" value="{CSRF_TOKEN}"{xhtml}>
-                                                            <input type="hidden" name="uid" value="{uid}"{xhtml}>{username} [ <a href="{action_url}" rel="nofollow">{lang_logoutorcreateaccount}</a> ]
-                                                        </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="alignright"><b>{lang_title}:</b></td>
-                                                        <td><input type="text" name="title" size="32" value="{title}" maxlength="96"{xhtml}></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="alignright" style="vertical-align:top;"><b>{lang_comment}:</b></td>
-                                                        <td><textarea name="comment" rows="10" style="width:90%">{comment}</textarea></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td class="alignright" style="vertical-align:top;"><b>{lang_postmode}:</b></td>
-                                                        <td style="vertical-align:top;">
-                                                            <select name="postmode">
-                                                                {postmode_options}
-                                                            </select><br{xhtml}>
-                                                            <span class="warningsmall">{allowed_html}</span>
-                                                        </td>
-                                                    </tr>
-                                                    {captcha}
-                                                    <tr>
-                                                        <td colspan="2"><div style="border-bottom:1px solid #cccccc"></div></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td colspan="2"><b>{lang_importantstuff}</b><ul>
-                                                            <li>{lang_instr_line1}</li>
-                                                            <li>{lang_instr_line2}</li>
-                                                            <li>{lang_instr_line3}</li>
-                                                            <li>{lang_instr_line4}</li>
-                                                            <li>{lang_instr_line5}</li></ul>
-                                                            <br{xhtml}>
-                                                            <input type="submit" name="mode" value="{lang_preview}"{xhtml}>
-                                                            {save_option}
-                                                        </td>
-                                                    </tr>
-                                                </table>
-                                            </form>
-                                {end_block}
+{start_block_postacomment}
+<form action="{site_url}/comment.php" method="post">
+    <table cellspacing="0" cellpadding="3" width="95%">
+        <tr>
+            <td class="alignright"><b>{lang_username}:</b></td>
+            <td>
+                {cid}
+                <input type="hidden" name="sid" value="{sid}"{xhtml}>
+                <input type="hidden" name="pid" value="{pid}"{xhtml}>
+                <input type="hidden" name="type" value="{type}"{xhtml}>
+                <input type="hidden" name="_glsectoken" value="{CSRF_TOKEN}"{xhtml}>
+                <input type="hidden" name="uid" value="{uid}"{xhtml}>{username} [ <a href="{action_url}" rel="nofollow">{lang_logoutorcreateaccount}</a> ]
+            </td>
+        </tr>
+        <tr>
+            <td class="alignright"><b>{lang_title}:</b></td>
+            <td><input type="text" name="title" size="32" value="{title}" maxlength="96"{xhtml}></td>
+        </tr>
+        <tr>
+            <td class="alignright" style="vertical-align:top;"><b>{lang_comment}:</b></td>
+            <td><textarea name="comment_text" rows="10" style="width:90%">{comment}</textarea></td>
+        </tr>
+        <tr>
+            <td class="alignright" style="vertical-align:top;"><b>{lang_postmode}:</b></td>
+            <td style="vertical-align:top;">
+                <select name="postmode">
+                    {postmode_options}
+                </select><br{xhtml}>
+                <span class="warningsmall">{allowed_html}</span>
+            </td>
+        </tr>
+        {captcha}
+        <tr>
+            <td colspan="2"><div style="border-bottom:1px solid #cccccc"></div></td>
+        </tr>
+        <tr>
+            <td colspan="2"><b>{lang_importantstuff}</b><ul>
+                <li>{lang_instr_line1}</li>
+                <li>{lang_instr_line2}</li>
+                <li>{lang_instr_line3}</li>
+                <li>{lang_instr_line4}</li>
+                <li>{lang_instr_line5}</li></ul>
+                <br{xhtml}>
+                <input type="submit" name="mode" value="{lang_preview}"{xhtml}>
+                {save_option}
+            </td>
+        </tr>
+    </table>
+</form>
+{end_block}
 {# end {templatelocation} #}
